# customer_sentiment_analysis

./: .tool-versions  README.md  app.py  pyproject.toml  requirements.txt  temp.py
models/: logistic_regression.joblib  logistic_regression_Summary_count.joblib  logistic_regression_Summary_tfidf.joblib  logistic_regression_Text_count.joblib  logistic_regression_Text_tfidf.joblib  naive_bayes_Summary_count.joblib  naive_bayes_Summary_tfidf.joblib  nbsvm.joblib  nbsvm_Summary_tfidf.joblib  nbsvm_Text_count.joblib
notebooks/: data_processing.ipynb  exploratory_data_analysis.ipynb  nearest-neighbors.ipynb
notebooks/.ipynb_checkpoints/: data_processing-checkpoint.ipynb  exploratory_data_analysis-checkpoint.ipynb  nearest-neighbors-checkpoint.ipynb
notebooks/Florian_self_try/: ModelTrainingForBertFlo.ipynb  NaiveBayesModel.ipynb  TextPreProcessingFLO.ipynb
pickles/: count_vectorizer_Summary.joblib  rarewords.pkl  tfidf_vectorizer_Summary.joblib
scripts/: infer.py  nbsvm_classifier.py  process.py  train.py
