[tool.poetry]
name = "customer_sentiment_analysis"
version = "0.1.0"
description = ""
authors = ["adimyth <mishraaditya6991@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.20.2"
sklearn = "^0.0"
matplotlib = "^3.4.1"
seaborn = "^0.11.1"
tqdm = "^4.60.0"
black = "^20.8b1"
flake8 = "^3.9.1"
mypy = "^0.812"
nltk = "^3.6.1"
attrdict = "^2.0.1"
isort = "^5.8.0"
xgboost = "^1.4.0"
spacy = "^3.0.5"
wordcloud = "^1.8.1"
spellchecker = "^0.4"
jupyter = "^1.0.0"
pandas = "1.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
